<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.taurus.trolley.LoginActivity">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        app:umanoDragView="@+id/dragView"
        app:umanoParallaxOffset="150dp"
        app:umanoPanelHeight="@dimen/login_activity_sign_up_panel_height"
        app:umanoShadowHeight="0dp">

        <!-- Login Screen / Main Content -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/edit_text_username_login"
                android:hint="@string/hint_username"
                android:layout_marginTop="120dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/edit_text_password_login"
                android:hint="@string/hint_password"
                android:layout_marginTop="@dimen/login_activity_space_between_views"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_login"
                android:text="@string/button_login_label"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/login_activity_space_between_views"
                android:background="@drawable/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp" />

        </LinearLayout>

        <!-- Sign Up Screen / Panel -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <View
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <RelativeLayout
                android:id="@+id/dragView"
                android:layout_alignParentTop="true"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_activity_sign_up_panel_height">

                <TextView
                    android:text="@string/sign_up_label"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/dragView"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/edit_text_username_sign_up"
                    android:hint="@string/hint_username"
                    android:layout_marginTop="120dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edit_text_email_sign_up"
                    android:hint="@string/hint_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_activity_space_between_views"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/edit_text_password_sign_up"
                    android:hint="@string/hint_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/login_activity_space_between_views"
                    android:inputType="textPassword" />

                <RadioGroup
                    android:orientation="horizontal"
                    android:id="@+id/radioSex"
                    android:layout_marginTop="@dimen/login_activity_space_between_views"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_male_label" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_female_label" />

                </RadioGroup>

                <Button
                    android:id="@+id/button_sign_up"
                    android:text="@string/button_sign_up_label"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/login_activity_space_between_views"
                    android:background="@drawable/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/button_debug_sign_up"
                    android:onClick="newUserForDebug"
                    android:text="new test user for debug"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/login_activity_space_between_views"
                    android:background="@drawable/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

    </com.sothree.slidinguppanel.SlidingUpPanelLayout>



</FrameLayout>
